package org.worksale.models.customers;

public enum ContactStatus {
    Contacted,
    NotContacted,
    WaitingForCallback,
    Interested,
}
